Update ghost template
Updated ghost templates and styles default, tag and loop

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -16,10 +16,10 @@ $textLight: #B0BEC5;
 $html: #FF5722;
 $css: #42A5F5;
 $javascript: #FBDD51;
-$nodejs: #8BC34A;
+$nodejs: #00E676;
 $npm: #E53935;
 $tools: #3367D6;
-$personal: #EC407A;
+$personal: #FF4081;
 $life: #4CAF50;
 $stars: #FFD600;
 $web: #64B5F6;
