--- a/src/blog/content/themes/carloscuesta/index.hbs
+++ b/src/blog/content/themes/carloscuesta/index.hbs
@@ -11,3 +11,10 @@
 <main id="content" class="content" role="main">
     {{> "loop"}}
 </main>
+
+<section class="newsletter">
+    <div class="wrap-big">
+    <h3 class="newsletter-message">Subscribe to my newsletter!</h3>
+    <p style="display:flex;"><a class="btn btn-red" href="#">Subscribe</a></p>
+</div>
+</section>
