--- a/src/blog/content/themes/carloscuesta/index.hbs
+++ b/src/blog/content/themes/carloscuesta/index.hbs
@@ -14,7 +14,11 @@
 
 <section class="newsletter">
     <div class="wrap-big">
-    <h3 class="newsletter-message">Subscribe to my newsletter!</h3>
-    <p style="display:flex;"><a class="btn btn-red" href="#">Subscribe</a></p>
+    <form style="display:flex; align-items: center; justify-content: space-between;" action="https://carloscuesta.us12.list-manage.com/subscribe/post?u=030a846a94f95a48db5b8eaa2&amp;id=454e4abeff" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <h3 class="newsletter-message">Subscribe to my newsletter!</h3>
+        <input type="email" value="" name="EMAIL" class="email-input" id="mce-EMAIL" placeholder="your@email.com" required>
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_030a846a94f95a48db5b8eaa2_454e4abeff" tabindex="-1" value=""></div>
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-red submit-input">
+    </form>
 </div>
 </section>
