--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -310,7 +310,7 @@ nav.nav {
 
 .twitter {
 	display: flex;
-	background-color: #f8f8f8;
+	background-color: #F1F6F8;
 	color: $text;
 	justify-content: center;
 
