Renaming and moving Jade to Pug
Renamed files, updated pug template source, removed jade as dependency added pug

--- a/src/app/templates/_includes/_sections/_awards.pug
+++ b/src/app/templates/_includes/_sections/_awards.pug
@@ -3,11 +3,11 @@ section.awards
         h2.section-title Awards
         h4.section-subtitle Distinctions and recognitions of my work.
         .row
-            -each award in me.awards
+            each award in me.awards
                 article.col-xs-12.col-sm-6.col-md-4.award-card
                     .award
                         svg(class="icon icon-award")
                             use(xlink:href="#icon-award")
-                        strong #{award.title}
-                        span.project #{award.project}
-                        span #{award.year} - #{award.organization}
+                        strong=award.title
+                        span.project=award.project
+                        span=award.year+' - '+award.organization
