--- a/src/app/templates/_includes/_sections/_profile.pug
+++ b/src/app/templates/_includes/_sections/_profile.pug
@@ -4,10 +4,10 @@ section.aboutme
             .col-xs-12.col-md-4
                 h2 Carlos Cuesta
                 ul
-                    li.profile-item #[strong Age]: #{me.age}
-                    li.profile-item #[strong Job]: #{me.job}
-                    li.profile-item #[strong Company]: #{me.company}
-                    li.profile-item #[strong Hometown]: #{me.hometown}
+                    li.profile-item #[strong Age]:=me.age
+                    li.profile-item #[strong Job]:=me.job
+                    li.profile-item #[strong Company]:=me.company
+                    li.profile-item #[strong Hometown]:=me.hometown
                 .social
                     a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href="https://twitter.com/#{social.twitter}", target="_blank")
                         svg.icon.icon-twitter
