--- a/src/app/templates/_includes/_body.pug
+++ b/src/app/templates/_includes/_body.pug
@@ -1,8 +1,8 @@
 main
-    include _sections/_aboutme.jade
-    include _sections/_github.jade
-    include _sections/_twitter.jade
-    include _sections/_blog.jade
-    include _footer.jade
+    include _sections/_aboutme.pug
+    include _sections/_github.pug
+    include _sections/_twitter.pug
+    include _sections/_blog.pug
+    include _footer.pug
 script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
