--- a/src/app/templates/_includes/_header.pug
+++ b/src/app/templates/_includes/_header.pug
@@ -1,7 +1,7 @@
-include _nav.jade
+include _nav.pug
 header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Person")
     .wrap
-        h1 
+        h1
             span.salute Hi! I'm
             span.my-name  #{me.name}
         h2.job #{me.job}
