--- a/src/app/templates/_includes/_header.pug
+++ b/src/app/templates/_includes/_header.pug
@@ -3,7 +3,7 @@ header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Per
     .wrap
         h1
             span.salute Hi! I'm
-            span.my-name  #{me.name}
-        h2.job #{me.job}
+            span.my-name=me.name
+        h2.job=me.job
         .buttons
-            a.btn.btn-large.btn-red.btn-red-raised(href="mailto:#{me.mail}?subject=Hello", onmousedown="ga('send', 'event', 'Header', 'Click', 'Button - Get in touch');") Get in touch
+            a.btn.btn-large.btn-red.btn-red-raised(href='mailto:'+me.mail+'?subject=Hello', onmousedown="ga('send', 'event', 'Header', 'Click', 'Button - Get in touch');") Get in touch
