Update theme styles

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -1236,6 +1236,6 @@ input#hamburger-menu {
 	}
 }
 
-.article-card p {
+.article-card p, .article-card h1, .article-card h2, .article-card h3, .article-card h4, .article-card h5, .article-card h6{
 	width: 100%;
 }
