--- a/src/app/templates/_includes/_head.pug
+++ b/src/app/templates/_includes/_head.pug
@@ -17,6 +17,7 @@ meta(name="og:description", content="#{site.description}")
 meta(property="og:image", content="http://carloscuesta.me/#{me.avatar}")
 meta(name="og:url", content="https://carloscuesta.me")
 meta(name="robots", content="index, follow")
+meta(name='norton-safeweb-site-verification', content='pbmzdewej40rd147ge8m1655pimbiptr4jkdnhhfib0tqrzta1sjvluhw7rpppz5x1kszo3z2gtgb9radg7doqunf1485fp013dpz2wee565lk2a31jr40a17q4tvebz')
 link(rel="apple-touch-icon", sizes="57x57", href="img/apple-icon-57x57.png")
 link(rel="apple-touch-icon", sizes="60x60", href="img/apple-icon-60x60.png")
 link(rel="apple-touch-icon", sizes="72x72", href="img/apple-icon-72x72.png")
