--- a/src/app/templates/_includes/_head.pug
+++ b/src/app/templates/_includes/_head.pug
@@ -1,7 +1,7 @@
 title #{site.title}
 meta(name="google-site-verification", content="78vmlhi_erc-UGybxcGwHyiUtf04wzYExTLa-4LoWio")
-meta(name="title", content="#{site.title}")
-meta(name="description", content="#{site.description}")
+meta(name="title", content=site.title)
+meta(name="description", content=site.description)
 meta(name="author", content="#{me.name}")
 meta(charset="utf-8")
 link(rel="canonical", href="https://carloscuesta.me")
