--- a/src/app/templates/_includes/_head.pug
+++ b/src/app/templates/_includes/_head.pug
@@ -9,12 +9,12 @@ meta(name="viewport", content="width=device-width, initial-scale=1.0")
 meta(name="twitter:card", content="summary")
 meta(name="twitter:title", content=site.title)
 meta(name="twitter:description", content=site.description)
-meta(name="twitter:image:src", content='http://carloscuesta.me/'+me.avatar+')
+//meta(name="twitter:image:src", content='http://carloscuesta.me/'+me.avatar+')
 meta(name="twitter:creator", content="@crloscuesta")
 meta(name="twitter:url", content="https://carloscuesta.me")
 meta(property="og:title", content=site.title)
 meta(name="og:description", content=site.description)
-meta(property="og:image", content='http://carloscuesta.me/'+me.avatar+')
+//meta(property="og:image", content='http://carloscuesta.me/'+me.avatar+')
 meta(name="og:url", content="https://carloscuesta.me")
 meta(name="robots", content="index, follow")
 meta(name='norton-safeweb-site-verification', content='pbmzdewej40rd147ge8m1655pimbiptr4jkdnhhfib0tqrzta1sjvluhw7rpppz5x1kszo3z2gtgb9radg7doqunf1485fp013dpz2wee565lk2a31jr40a17q4tvebz')
