--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -35,19 +35,18 @@ html
         meta(name='msapplication-TileImage', content='img/ms-icon-144x144.png')
         meta(name='theme-color', content='#FF5252')
         link(rel="mask-icon" href="c.svg" color="#FF5252")
-        //-link(rel="stylesheet", type="text/css", href="/aboutme.css")
-        style
+        link(rel="stylesheet", type="text/css", href="/aboutme.css")
+        //-style
             include ../../static/css/aboutme.css
         script
             include ../../static/js/fonts.js
     body
         include ../_includes/_nav.pug
         include ../_includes/_icons.pug
-        include ../_includes/_logos.pug
         header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Person")
             .wrap
                 h1
-                    span.about About 
+                    span.about About
                     span.my-name=me.name
                 h2.position-title=me.job
         main
